# rust_test_app

./: .editorconfig  .env  .env.docker  .example.env  .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  docker-compose.yaml
.data/: state.json
.github/workflows/: test.yaml
fe/: package-lock.json
fe/src/: App.vue
fe/src/assets/: main.css
fe/src/components/: CreateToDoItem.vue  DeleteButton.vue  ToDoItem.vue  ToDoItemDetails.vue  ToDoItemLink.vue  ToDoItems.vue  UpdateButton.vue
fe/src/router/: index.js
fe/src/stores/: ToDoItem.js  ToDoItems.js
fe/src/views/: ToDoItemView.vue
migrations/2024-02-12-210325_create_to_do_status/: down.sql  up.sql
migrations/2024-02-12-213931_create_to_do_items/: up.sql
migrations/2024-03-29-191949_user_model/: up.sql
migrations/2024-03-29-193520_user_update_dates/: down.sql  up.sql
migrations/2024-03-29-202331_update_todo_default_user_id_not_null/: down.sql  up.sql
migrations/2024-03-30-192115_modification_trigger_to_do/: down.sql  up.sql
migrations/2024-03-30-192654_modification_trigger_user/: down.sql  up.sql
migrations/2024-03-30-223226_user_email_constraint/: down.sql  up.sql
postman/: Rust web.postman_collection.json  rust web.postman_environment.json
src/: counter.rs  database.rs  jwt.rs  main.rs  processes.rs  schema.rs  state.rs
src/helpers/: datetime.rs  email.rs  env.rs  mod.rs  uuid.rs
src/json_serialization/: edit_to_do_item.rs  mod.rs  new_to_do_item.rs  to_do_item.rs  to_do_items.rs  user_items.rs
src/json_serialization/response/: response_item.rs  response_status.rs
src/json_serialization/task/: edit_to_do_item.rs  mod.rs  new_to_do_item.rs  to_do_item.rs  to_do_items.rs
src/json_serialization/user/: edit_user_item.rs  mod.rs  new_user_item.rs  password_user_item.rs  user_item.rs  user_items.rs
src/models/: mod.rs
src/models/item/: item.rs  new_item.rs
src/models/task/: item.rs  items.rs  new_item.rs
src/models/task_status/: item.rs
src/models/user/: item.rs  items.rs  new_item.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  in_progress.rs  mod.rs  open.rs
src/to_do/traits/: create.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: items.rs
src/views/auth/: mod.rs
src/views/handlers/: json_handler.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  (+3 more)
templates/: layout.html
(+9 files in other folders)
