[package]
name = "web_app"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/BentBr/rust_test_app"
readme = "README.md"
categories = ["web app", "async actix server"]
keywords = ["web", "test", "rust", "playground"]
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web = "4.4.0"
cargo-audit = "0.18.2"
cargo-nextest = "0.9.59"
chrono = "0.4.31"
uuid = "1.7.0"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2", "uuid"] }
dotenv = "0.15.0"
futures = "0.3.28"
sentry = "0.31.7"
sentry-actix = "0.31.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
